chore: reorganize repo

--- a/_old/toy_model_v2.ipynb
+++ b/_old/toy_model_v2.ipynb
@@ -148,8 +148,7 @@
     "\n",
     "    def calculate_liquidity_emission(af_amount_deposited, lock_period_days):\n",
     "        discount_factor = 1 / (1 - lock_period_days / 366)  # Simple discount factor\n",
-    "        return af_amount_deposited * MINING_CONVERSION_RATE * discount_factor\n",
-    "    "
+    "        return af_amount_deposited * MINING_CONVERSION_RATE * discount_factor\n"
    ]
   },
   {
