--- a/mining_model.ipynb
+++ b/mining_model.ipynb
@@ -43,9 +43,11 @@
     "        self.k = k\n",
     "\n",
     "    def add_liquidity(self, miner, af_amount_deposited, lock_period_days):\n",
+    "        # stop adding liquidity if the total supply is already deposited\n",
     "        if self.aggregate_liquidity() > REWARD_TOKEN_TOTAL_SUPPLY:\n",
     "            return\n",
     "        \n",
+    "        # stop adding liquidity if the total supply is already deposited\n",
     "        if self.aggregate_emission() > MINING_EMISSION_BUDGET:\n",
     "            return\n",
     "    \n",
